# vibly

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-pages.yml
agent/: vibly-codex-implementation-spec.md  vibly-codex-task-breakdown.md  vibly-mvp-architecture-freeze.md
apps/dev-gateway/data/: store.json
apps/dev-gateway/src/: server.mjs
docs/: 00-product-scope.md  01-information-architecture.md  02-page-spec-chat-first.md  03-component-spec.md  04-interaction-and-demo-states.md  05-mock-data.md  README.md
public/: CNAME
scripts/: deploy-gh-pages.sh  start-dev-gateway.sh  start-web.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/agents/: AgentListItem.tsx
src/hooks/: useClickOutside.ts  useMediaQuery.ts  useTheme.tsx
src/i18n/: format.ts  index.tsx  labels.ts  messages.ts
src/lib/: app-context.ts  nav.ts  utils.ts
src/mock/: agents.ts  contacts.ts  conversations.ts  currentUser.ts  featuredAgents.ts  identities.ts  index.ts  messages.ts  users.ts  wallet.ts
src/pages/: AgentsPage.tsx  ChatPage.tsx  ContactsPage.tsx  DiscoverPage.tsx  MePage.tsx  PublicIdentityPage.tsx  WalletPage.tsx
src/router/: AppRouter.tsx
src/styles/: theme.css  tokens.css
src/types/: index.ts
(+82 files in other folders)
